hphp/hack/test/typecheck/new_inference/tparam_constraints2.php.like_types.exp
File "tparam_constraints2.php", line 3, characters 10-23:
Invalid return type (Typing[4110])
File "tparam_constraints2.php", line 3, characters 10-23:
Expected void because this function implicitly returns void
File "tparam_constraints2.php", line 6, characters 4-24:
But got Awaitable<~keyset<Tk>>
File "tparam_constraints2.php", line 3, characters 10-23:
Invalid return type (Typing[4110])
File "tparam_constraints2.php", line 6, characters 4-24:
Expected Awaitable<~keyset<Tk>>
File "tparam_constraints2.php", line 3, characters 10-23:
But got void because this function implicitly returns void
File "tparam_constraints2.php", line 15, characters 5-34:
Invalid argument (Typing[4110])
File "tparam_constraints2.php", line 5, characters 3-31:
Expected ~(function([unresolved]): Awaitable<[unresolved]>) because it is an unenforceable type
File "tparam_constraints2.php", line 15, characters 5-34:
But got (function(int $x): Awaitable<void>)
